[workspace]
members = [
	"cargo-progenitor",
	"example-build",
	"example-macro",
	"example-wasm",
	"progenitor",
	"progenitor-client",
	"progenitor-impl",
	"progenitor-macro",
]

resolver = "2"

#[patch."https://github.com/oxidecomputer/dropshot"]
#dropshot = { path = "../dropshot/dropshot" }

[patch."https://github.com/oxidecomputer/typify"]
typify = { git = "https://github.com/coolavery/typify.git", branch = "0.1.0-unreachable" }

#[patch.crates-io]
#serde_tokenstream = { path = "../serde_tokenstream" }
#typify = { path = "../typify/typify" }
#rustfmt-wrapper = { path = "../rustfmt-wrapper" }
